# rustique

./: README.md
rustique/: Cargo.toml
rustique/src/: localization.rs  main.rs  main_menu.rs
rustique_1.0/: Cargo.toml
rustique_1.0/src/: canvas.rs  localization.rs  main.rs  main_menu.rs  paint.rs
rustique_2.0/: Cargo.toml
rustique_2.0/src/: localization.rs  main.rs
rustique_3.0/src/: localization.rs  main.rs  main_menu.rs
rustique_old/: Cargo.toml
rustique_old/src/: main.rs  main_menu.rs
website/: copy.html  index.html  style.css
website/css/: style.css
websiteV2/: index.html
websiteV2/css/: style.css
websiteV2/js/: main.js
websiteV3/: index.html
websiteV3/css/: style.css
websiteV3/js/: main.js
