[package]
name = "rustique"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef"] }   
image = "0.24.6"
rfd = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1