[package]
name = "rustique"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef"] }
image = "0.24.6"
rfd = "0.11"
rayon = "1.7.0"
parking_lot = "0.12.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1  # Un peu d'optimisation même en mode développement